# Capstone-Project

./: .gitignore  Account.html  Procfile  README.md  db.sqlite3  index.html  login.html  manage.py  package.json  pyproject.toml  signup.html  style.css  styles.css
Client/: package-lock.json  package.json
Client/public/: index.html
Client/src/: App.css  App.js  transition.css
Pages/: urls.py  views.py
Pages/templates/: _index.html  additem.html  form.html  index.html  item.html  login.html  map.html  newmap.html  signup.html  userpage.html
PongosList/: axios.py  settings.py  urls.py
SpiffoList/: asgi.py  axios.py  manage.py  module1.py  routing.py  settings.py  urls.py  views.py  wsgi.py
Temporary Template Folder/signup/: signup_styles.css
chat/: apps.py  consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py
data/: urls.py  views.py
database/: models.py  urls.py  views.py
database/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: Api.js  App.js
homepage/: urls.py  views.py
listings/: forms.py  models.py  serializers.py  urls.py  views.py
mysite1/: db.sqlite3
mysite1/main/: admin.py  (+4 more)
other files/: Account.html
sql/: addimage.sql  additem.sql  database_create.sql  getgaragesale.sql  gititem.sql  gititemimage.sql  gititemlist.sql  gititemlistbygsid.sql  newgaragesale.sql  updatedispaly.sql  usertable_create1.sql
static/: dummyaddress.json  dummyitem.json
theme/: package-lock.json
users/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
(+120 files in other folders)
