[tool.poetry]
name = "capstone-project"
version = "0.1.0"
description = ""
authors = ["lambdacore <jonathanwh93@gmail.com>"]
readme = "README.md"
packages = [{include = "capstone_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
djangorestframework = "^3.14.0"
django-channels = "^0.7.0"
django-cors-headers = "^3.13.0"
channels = "^4.0.0"
drf-yasg = "^1.21.5"
channels-redis = "^4.0.0"
daphne = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
